Specify table styles to fix a bug in Firefox where all row list items would be too wide

--- a/app/styles/trumps/_lists.scss
+++ b/app/styles/trumps/_lists.scss
@@ -33,6 +33,8 @@
 .row-list {
   @extend %unstyled-list;
   table-layout: fixed;
+  display: table;
+  width: 100%;
 
   > li {
     display: table-cell;
